--- a/projet.html
+++ b/projet.html
@@ -74,6 +74,6 @@ Notre projet BTS Systèmes Numériques consiste en la conception d'un site web p
         <h3><span class="material-symbols-outlined">stars</span>Bailly Lucas</h3>
         <p>&copy; Bailly Lucas 2024</p>
     </footer>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
