mise a jour du portfolio

--- a/projet.html
+++ b/projet.html
@@ -47,7 +47,7 @@
         
         <div class="projcard projcard-red">
           <div class="projcard-innerbox">
-            <img class="projcard-img" src="proje.jpg" />
+            <img class="projcard-img" src="img/esy.png" />
             <div class="projcard-textbox">
               <div class="projcard-title">PROJET BTS SN2</div>
               <div class="projcard-subtitle">EasyPortal portail automatique</div>
