--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="mailto:baillylucas04@gmail.com">Email<span class="material-symbols-outlined">
                         call_made
                         </span></a>
-                    <a href="BaillyLucasCvIPSSI.pdf">Curriculum<span class="material-symbols-outlined">
+                    <a href="BaillyLucasCV.pdf">Curriculum<span class="material-symbols-outlined">
                         call_made
                         </span></a>
                     <a href="https://github.com/Lcs-93">Github<span class="material-symbols-outlined">
